--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -14,25 +14,32 @@ Functions
 
 *	Something I am unhappy about is nested parentheses. E.G.
 
-		if( ( c = getc() ) != EOF )
+		x = pow( 2, 3 );
 
-	It looks bad. I think that the following looks much better:
+	It looks bad. It's also a pain to maintain, as it's easy to forget to space correctly. I think that the following looks much better:
 
 		x = pow(2, 3);
 
-	However, my eyesight isn't very good, and I've found that it's easier to notice errors when there is plenty of spacing. It's ugly, sure, but utility wins out in this case.
+	However, my eyesight isn't very good, and I've found that it's easier to notice errors when there is plenty of spacing. It's ugly, sure, but utility wins out in this case. It's close, though. I could easily switch after I've had some more experience.
 
 Control Functions
 -----------------
 
 *	*if*, *when*, etc. are all functions, and should be written as such, per the funtion style guide. (I know many people treat them stylistically as if they were different.)
 
-*	Control functions one-liners should be split into two lines. E.G.
+*	Control functions one-liners should be treated as multi-liners. That is, instead of following the K & R style, and do something like the following:
 
 		if( x == 1 )
 			printf( "x == 1, yay!\n" );
 
-	This way the concept of the conditional is decoupled from the concept of the consequent.
+	I have found that it is better to add curly braces, per the following:
+
+		if( x == 1 )
+		{
+			printf( "x == 1, yay!\n" );
+		}
+
+	I will readily admit that the former style looks better, but I've found that the latter is less error-prone when adding further lines to the consequent clause. Again, utility wins against beauty!
 
 *	Control functions multi-liners should use curly braces something like the following:
 
@@ -42,7 +49,7 @@ Control Functions
 			printf( "I am so bored...!\n" );
 		}
 
-	This allows the body of the control functions to be grouped logically, and without the control function call melting into the first line of the body.
+	This allows the body of the control functions to be grouped logically, and without the control function call melting into the first line of the body. However, this makes for an overall more consistent style.
 
 *	The *else* function follows this convention, too. E.G.:
 
