tl;dr + naming convention tag

--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -1,6 +1,79 @@
 The C Programming Style Guide
 =============================
 
+TL;DR
+-----
+
+Below is some pseudo program code that demonstrates my C style (for more detail, read the rest of the guide):
+
+	```c
+	////////////////////////////////////////////////////////////////////////////////
+	// Comments
+
+	// This is simple C program that demonstrates my preferred C coding style.
+
+	////////////////////////////////////////////////////////////////////////////////
+	// Libraries
+
+	#include <stdio.h>
+
+	////////////////////////////////////////////////////////////////////////////////
+	// Symbolic Constants
+
+	#define FALSE 0
+	#define TRUE 1
+
+	////////////////////////////////////////////////////////////////////////////////
+	// Macros
+
+	#define PrintExpr( x ) ( printf( "PrintExpr:\n\t%s = [%d]\n", #x, ( x ) ) )
+
+	////////////////////////////////////////////////////////////////////////////////
+	// Function Prototypes
+
+	void print_test( int x, int y );
+	/* Prints out x + y twice: 1) adding the two in the arguments of a normal `printf` 2) letting a macro do the "heavy" lifting.
+
+	   *x* = the first integer you are adding.
+	   *y* = the second integer you are adding. */
+
+	////////////////////////////////////////////////////////////////////////////////
+	// Functions
+
+	void print_test( int x, int y )
+	{
+		printf( "printf:\n\tx + y = [%d]\n", x + y );
+		PrintExpr( x + y );
+	}
+
+	////////////////////////////////////////////////////////////////////////////////
+	int main()
+	{
+		int *x, y; // I fully realize how silly it is to make x into a pointer.
+
+		/* Sets x */
+		for( *x = 0; *x < 10; ++( *x ) );
+
+		/* Sets y */
+		while( y != 90 )
+		{
+			if( y < 80 )
+			{
+				y = y + 10;
+			}
+			else if( y >= 80 )
+			{
+				++y;
+			}
+		}
+
+		/* Prints x + y */
+		print_test( *x, y );
+
+		return 0;
+	}
+	```
+
 Functions
 ---------
 
@@ -187,3 +260,8 @@ Organization
 	*	Header files get the Symbolic Constants, Macros, and Functional Prototypes (and occasionally also any relevant *#include*'s).
 	*	Function files get Functions and any *#include*'s.
 	*	A main file gets the main function and any relevant *#include*'s.
+
+Variable & Function Naming
+--------------------------
+
+Naming conventions have yet to be determined. C convention generally runs towards minimal length (e.g. 's' to indicate a char pointer to a string). I've toyed with going with the first letters of a short description separated by underscores (e.g. "dynamic string" = `d_s`). At other times, I've fallen back on the C convention. I'll update this section when I've sorted out my own position.
